# crawler

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: archive.md  capabilities.md  design.md  integrations.md  observability.md  plugins.md  test-matrix.md  ui.md
examples/: seeds.txt  vcrawl.json
tests/: test_archive.py  test_capabilities.py  test_cli.py  test_config.py  test_discovery.py  test_downloads.py  test_engine.py  test_extractors.py  test_fetchers.py  test_integrations.py  test_kernel.py  test_observability.py  test_plugins.py  test_robots.py  test_scope.py  test_storage.py  test_test_matrix.py  test_ui.py
vcrawl/: __init__.py  archive.py  capabilities.py  challenges.py  cli.py  config.py  discovery.py  doctor.py  downloads.py  engine.py  events.py  exporters.py  extractors.py  fetchers.py  frontier.py  integrations.py  media_detection.py  media_tools.py  models.py  observability.py  pipelines.py  plugin_templates.py  plugins.py  queue_backends.py  resolvers.py  robots.py  scheduler.py  scope.py  stages.py  storage.py  test_matrix.py  ui.py  workers.py
